feat: update api hospital
